src/style/index.css
/* Ensure the first letter of the proposal token is not capitalized */
.link .entry .proposal-token:first-letter {
  text-transform: none !important;
}

.submit-page #header-bottom-left,
#header-bottom-left {
  height: 72px;
  top: 0;
}

#header-img.default-header {
  width: 188px;
  padding-left: 32px;
}

.link .thumbnail.self {
  display: none;
}

a.attached-image-remove {
  color: #fff !important;
  background-color: #8997A5;
}

.submit-page #title-field textarea {
  border: 1px solid #8997A5;
}

.proposal-filter-count {
  color: #bbb;
}

.proposal-draft {
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
}

.proposal-draft .delete-draft {
  margin-left: 10px;
  cursor: pointer;
}

.proposal-draft .delete-draft:hover {
  color: #c32a2a;
  text-decoration: underline;
}

.proposal-draft .delete-draft i {
  margin-right: 3px;
}

.entry .buttons li.save-button,
.entry .buttons li.give-gold-button,
.entry .buttons li.report-button,
#header .redditname,
#login-form .c-checkbox input,
#login-form .c-checkbox label,
#remember-me input,
#remember-me label {
  display: none;
}

#login-form .reset-password-link,
#register-form .resend-verification-link {
  float: right;
  height: 36px;
  line-height: 36px;
  margin: 4px 16px 4px 0;
}

.score.likes {
    color: #2971ff;
    display: none;
}

.score.dislikes {
    color: #fd714a;
    display: none;
}

.side {
  padding: 0;
  right: 0;
  background: 0 0;
  width: 320px
}

body, html {
  font-size: 14px;
  font-family: "Source Sans Pro", "Helvetica Neue", arial, sans-serif;
  height: 100%;
  width: 100%;
  padding: 0;
  margin: 0;
  min-height: 100vh;
  background: #f3f5f6;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

#app {
  background: #091440;
  font-weight: 400;
  color: #132f4b;
  height: 100%;
}

.error {
  color: red;
  font-weight: bold;
}

.CodeMirror {
  min-height: 200px;
}

a {
  color: #2970ff;
  text-decoration: none;
}

a:hover, a:focus {
  text-decoration: underline;
}

.clearfloat:after {
  content: "";
  display: table;
  clear: both;
}

.header {
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  height: 56px;
  padding: 0;
  background: #0c1e3e;
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
  z-index: 50;
}

.header h1 {
  float: left;
  margin: 0;
  padding: 0 15px;
  font-size: 24px;
  line-height: 56px;
  font-weight: 400;
  color: #FFF;
}

.header nav {
  float: left;
  font-size: 100%;
}

.header nav a {
  display: inline-block;
  height: 56px;
  line-height: 56px;
  padding: 0 15px;
  min-width: 50px;
  text-align: center;
  background: rgba(255,255,255,0);
  text-decoration: none;
  color: #d4f0fd;
  will-change: background-color;
}

.header nav a:hover,
.header nav a:active {
  background: rgba(255,255,255,0.2);
}

.header nav a.active {
  background: rgba(255,255,255,0.4);
}

.page {
  min-height: 100%;
  width: 100%;
}

.user-profile-page,
.reset-password-page,
.reset-password-next-step-page,
.forgotten-password-page,
.forgotten-password-next-step-page,
.resend-verification-page,
.resend-verification-next-step-page,
.signup-next-step-page,
.submit-proposal-page,
.logout-page {
  padding-left: 20px;
  padding-right: 20px;
  padding-bottom: 20px;
}

.submit-proposal-page .submit-wrapper {
  display: flex;
  margin: 20px 0;
}

.attach-wrapper {
  display: flex;
  align-items: flex-start;
  justify-content: flex-start;
  flex-flow: column wrap;
  margin: 20px 0;
}

.attach-wrapper div:first-child {
  width: auto;
}

.attach-wrapper .button-wrapper {
  display: flex;
  flex-flow: row wrap;
}

.attached-images {
  display: flex;
  flex-flow: row wrap;
  justify-content: flex-start;
  align-items: flex-start;
}

.submit-proposal-page .attach-wrapper .attach-requirements {
  display: flex;
  margin-left: 40px;
  border: 1px solid #ccc;
  font-size: 14px;
  color: #777;
  padding: 20px;
  flex-flow: column nowrap;
  justify-content: flex-start;
  align-items: flex-start;
}

.submit-proposal-page .attach-wrapper .attach-requirements span {
  color: #000;
}

.input-with-error {
  display: flex;
  flex-flow: column nowrap;
  justify-content: flex-start;
  align-items: flex-start;
}

.input-with-error .ffeditor {
  width: 100%;
}

.input-subline {
  font-size: 12px;
}

.input-error {
  color: #bf4153;
}

.input-warning {
  color: #d05a15;
}

.submit-button-error {
  color: #bf4153;
  font-size: 14px;
  display: inline-block;
  height: 36px;
  line-height: 18px;
  padding: 4px 0;
}

.login-form fieldset {
  background-color: white;
}

.markdown-editor {
  display: flex;
}
.markdown-editor .editor {
  display: flex;
  flex-direction: row;
}
.markdown-editor .preview {
  display: flex;
  flex-direction: row;
  margin: 0 50px;
}

.login-form a {
  display: inline-block;
}
.login-form-side .recover-password {
  margin-left: 0;
}

.change-password-form,
.change-username-form {
	padding: 1em;
}
.resend-verification-form,
.forgotten-password-form,
.reset-password-form {
  width: calc(100% -320px);
}

.forgotten-password-form {
  margin-right: 250px;
}

.icon::before {
  display: inline-block;
  font-style: normal;
  font-variant: normal;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
}

.login::before {
  font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f007";
}

.message-ct {
  margin: 16px 0;
  display: flex;
  background-color: #ffffff;
}
.message-icon {
  min-width: 64px;
  line-height: 62px;
  font-size: 24px;
  color: #ffffff;
  display: flex;
  align-items: start;
  justify-content: center;
}
.message-text {
  padding: 22px;
  flex-direction: column;
  display: flex;
  justify-content: center;
}
.message-header {
  font-size: 18px;
  vertical-align: middle;
  margin-bottom: 8px;
}
.message-body {
  vertical-align: middle;
  white-space: normal;
}
.message-body p {
  margin-bottom: 8px;
}
.message-success {
  border: 1px solid #41bf53;
}
.message-success > .message-icon {
  background: #41bf53;
}
/* ... */

